[package]
name = "ibc-ckb_contracts-test_utils"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "Utilities for testing IBC CKB contracts."
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-script    = "0.107.0"
ckb-types     = "0.107.0"
ckb-traits    = "0.107.0"
ckb-error     = "0.107.0"
log = "0.4.17"
rand = "0.8.5"

[dev-dependencies]
env_logger = "0.10.0"
