[package]
name = "ibc-ckb_contracts-eth_light_client-client_type_lock"
version = "0.3.0-alpha"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "An implementation of ETH light client in CKB contract (client type lock part)."
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-std = "0.13.0"
# TODO Replace blake2b-rs with ckb-hash if ckb-hash support no-std.
blake2b-rs = "0.2.0"
[dependencies.eth_light_client_in_ckb-verification]
version = "0.3.0-alpha"
git = "https://github.com/synapseweb3/eth-light-client-in-ckb"
rev = "9325266"
default-features = false
features = ["ckb-vm"]

[features]
default = []
debugging = []

[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
strip = true
