[package]
name = "ibc-ckb_contracts-eth_light_client-mock_business_type_lock"
version = "0.2.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "An IBC implementation of ETH light client in CKB contract (testing part)."
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-std = "0.13.0"
eth_light_client_in_ckb-verification = { version = "0.2.1", default-features = false, git = "https://github.com/synapseweb3/eth-light-client-in-ckb", tag = "v0.2.1" }

[features]
default = []
debugging = []

[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
strip = true
