[package]
name = "ibc-ckb_contracts-ibc-sudt-transfer"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[features]
# Make CI happy, not actually used
debugging = []

[dependencies]
ckb-std = "0.13.0"
hex = { version = "0.4.3", default-features = false }
ics-base = { path = "../../ics/base" }
prost = { version = "0.12.0", default-features = false, features = ["prost-derive"] }
