[package]
name = "ics-base"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-std = "0.13.0"
ckb-ics-axon = { git = "https://github.com/synapseweb3/ckb-ics.git", rev = "043ad63" }
rlp = { version = "0.5.2", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
atomics-polyfill = { path = "../../../crates/atomics-polyfill" }
