[package]
name = "ibc-ckb_contracts-ics-chan"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-std = "0.13.0"
ckb-ics-axon = {git = "https://github.com/synapseweb3/ckb-ics.git", rev = "efd7af5"}
rlp ={ version = "0.5.2", default-features = false}
ckb-standalone-types ={ version = "0.1.2", default-features = false}
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
axon-client = {version = "*", path = "../axon_client"}

[features]
default = []
debugging = ["axon-client/debugging"]

[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
strip = true
