[package]
name = "ibc-ckb_contracts-ics-channel"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-std = "0.13.0"
ics-base = { path = "../base" }

[features]
default = []
debugging = []
