[package]
name = "ibc-ckb_contracts-ics-packet"
version = "0.1.0-alpha.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"

[dependencies]
ckb-std = "0.13.0"
rlp = { version = "0.5.2", default-features = false }
ckb-standalone-types = { version = "0.1.2", default-features = false }
ics-base = { version = "*", path = "../base" }

[features]
default = []
debugging = ["ics-base/debugging"]

[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
strip = true
