cargo-features = ["per-package-target"]

[package]
name = "ibc-ckb_contracts-mock_contracts-reverse_args_lock"
version = "0.1.0-alpha.0"
authors = ["Boyu Yang <yangby@cryptape.com>"]
edition = "2021"
license = "MIT"
description = "This contract is a mock contract, and it is used for testing."
homepage = "https://github.com/synapseweb3/ibc-ckb-contracts"
repository = "https://github.com/synapseweb3/ibc-ckb-contracts"
default-target = "riscv64imac-unknown-none-elf"

[dependencies]
ckb-std = "0.10.0"

[features]
default = []
debugging = []

[profile.release]
overflow-checks = true
lto = false
codegen-units = 1
panic = 'abort'
strip = true
